[package]
name = "webrtc-unreliable"
version = "0.6.0"
authors = ["kyren <kerriganw@gmail.com>"]
edition = "2018"
description = "UDP-like (unreliable, unordered) communication between Javascript/WebAssembly and native Rust via WebRTC"
repository = "https://github.com/kyren/webrtc-unreliable"
documentation = "https://docs.rs/webrtc-unreliable"
readme = "README.md"
keywords = ["wasm", "webrtc"]
license = "MIT"

[dependencies]
byteorder = "1.3"
crc = "3.0"
futures-channel = { version = "0.3", features = ["sink"] }
futures-core = { version = "0.3" }
futures-util = { version = "0.3", features = ["sink"] }
http = "1.0"
log = "0.4"
openssl = "0.10"
pin-project = "1.0"
rand = "0.8"
tokio = { version = "1.0", features = ["net"], optional = true }

[dev-dependencies]
clap = "3.0"
env_logger = "0.9"
futures = { version = "0.3" }
hyper = { version = "0.14", features = ["http1", "runtime", "server", "stream"] }
tokio = { version = "1.0", features = ["macros", "net", "rt-multi-thread"] }

[[example]]
name = "echo-server"
required-features = ["tokio"]
